Fixed z-index bug where Chrome's smoothscroll plugin was causing post controls to be unclickable.

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -96,6 +96,7 @@ strong {
     position: fixed;
     left: 0;
     right: 0;
+    z-index: 4;
 }
 
 #header {
@@ -155,7 +156,7 @@ strong {
     left: 31%;
     top: 0;
     right: 0.5em;
-    z-index: -1;
+    z-index: 3;
 
     padding: 5.5em 0 3.7em 0;
 }
